// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpinnerRomb matches the snapshot 1`] = `
<svg
  fill="currentColor"
  style={
    Object {
      "color": "#fff",
      "overflow": "visible",
      "width": "100px",
    }
  }
  viewBox="0 0 97 96"
>
  <circle
    cx={18.5}
    cy={33.1901}
    fill="#00000044"
    r={1.25}
  />
  <circle
    cx={18.5}
    cy={48.1901}
    fill="#00000044"
    r={1.25}
  />
  <circle
    cx={18.5}
    cy={63.1901}
    fill="#00000044"
    r={1.25}
  />
  <circle
    cx={3.5}
    cy={48.1901}
    fill="#00000044"
    r={1.25}
  />
  <circle
    cx={33.5}
    cy={48.1901}
    fill="#00000044"
    r={1.25}
  />
  <circle
    cx={79.5}
    cy={48.1901}
    fill="#00000044"
    r={1.25}
  />
  <circle
    cx={33.5}
    cy={33.1901}
    fill="#00000044"
    r={1.25}
  />
  <circle
    cx={33.5}
    cy={18.1901}
    fill="#00000044"
    r={1.25}
  />
  <circle
    cx={94.5}
    cy={48.1901}
    fill="#00000044"
    r={1.25}
  />
  <circle
    cx={79.5}
    cy={33.1901}
    fill="#00000044"
    r={1.25}
  />
  <circle
    cx={33.5}
    cy={63.1901}
    fill="#00000044"
    r={1.25}
  />
  <circle
    cx={33.5}
    cy={78.1901}
    fill="#00000044"
    r={1.25}
  />
  <circle
    cx={49.5}
    cy={18.1901}
    fill="#00000044"
    r={1.25}
  />
  <circle
    cx={49.5}
    cy={3.19006}
    fill="#00000044"
    r={1.25}
  />
  <circle
    cx={49.5}
    cy={48.1901}
    fill="#00000044"
    r={1.25}
  />
  <circle
    cx={49.5}
    cy={33.1901}
    fill="#00000044"
    r={1.25}
  />
  <circle
    cx={49.5}
    cy={63.1901}
    fill="#00000044"
    r={1.25}
  />
  <circle
    cx={49.5}
    cy={78.1901}
    fill="#00000044"
    r={1.25}
  />
  <circle
    cx={49.5}
    cy={93.1901}
    fill="#00000044"
    r={1.25}
  />
  <circle
    cx={64.5}
    cy={18.1901}
    fill="#00000044"
    r={1.25}
  />
  <circle
    cx={64.5}
    cy={48.1901}
    fill="#00000044"
    r={1.25}
  />
  <circle
    cx={64.5}
    cy={33.1901}
    fill="#00000044"
    r={1.25}
  />
  <circle
    cx={64.5}
    cy={63.1901}
    fill="#00000044"
    r={1.25}
  />
  <circle
    cx={64.5}
    cy={78.1901}
    fill="#00000044"
    r={1.25}
  />
  <circle
    cx={79.5}
    cy={63.1901}
    fill="#00000044"
    r={1.25}
  />
  <g
    style={
      Object {
        "animation": "spinners-react-romb 14s steps(2, end) infinite",
      }
    }
  >
    <circle
      cx={18.5}
      cy={33.1901}
      r={1.75}
    />
    <circle
      cx={18.5}
      cy={48.1901}
      r={1.75}
    />
    <circle
      cx={18.5}
      cy={63.1901}
      r={1.75}
    />
    <circle
      cx={3.5}
      cy={48.1901}
      r={1.75}
    />
    <circle
      cx={33.5}
      cy={48.1901}
      r={1.75}
    />
  </g>
</svg>
`;

exports[`SpinnerRomb matches the snapshot with default props 1`] = `
<svg
  fill="currentColor"
  style={
    Object {
      "color": "#38ad48",
      "overflow": "visible",
      "width": "50px",
    }
  }
  viewBox="0 0 97 96"
>
  <circle
    cx={18.5}
    cy={33.1901}
    fill="#00000044"
    r={2.5}
  />
  <circle
    cx={18.5}
    cy={48.1901}
    fill="#00000044"
    r={2.5}
  />
  <circle
    cx={18.5}
    cy={63.1901}
    fill="#00000044"
    r={2.5}
  />
  <circle
    cx={3.5}
    cy={48.1901}
    fill="#00000044"
    r={2.5}
  />
  <circle
    cx={33.5}
    cy={48.1901}
    fill="#00000044"
    r={2.5}
  />
  <circle
    cx={79.5}
    cy={48.1901}
    fill="#00000044"
    r={2.5}
  />
  <circle
    cx={33.5}
    cy={33.1901}
    fill="#00000044"
    r={2.5}
  />
  <circle
    cx={33.5}
    cy={18.1901}
    fill="#00000044"
    r={2.5}
  />
  <circle
    cx={94.5}
    cy={48.1901}
    fill="#00000044"
    r={2.5}
  />
  <circle
    cx={79.5}
    cy={33.1901}
    fill="#00000044"
    r={2.5}
  />
  <circle
    cx={33.5}
    cy={63.1901}
    fill="#00000044"
    r={2.5}
  />
  <circle
    cx={33.5}
    cy={78.1901}
    fill="#00000044"
    r={2.5}
  />
  <circle
    cx={49.5}
    cy={18.1901}
    fill="#00000044"
    r={2.5}
  />
  <circle
    cx={49.5}
    cy={3.19006}
    fill="#00000044"
    r={2.5}
  />
  <circle
    cx={49.5}
    cy={48.1901}
    fill="#00000044"
    r={2.5}
  />
  <circle
    cx={49.5}
    cy={33.1901}
    fill="#00000044"
    r={2.5}
  />
  <circle
    cx={49.5}
    cy={63.1901}
    fill="#00000044"
    r={2.5}
  />
  <circle
    cx={49.5}
    cy={78.1901}
    fill="#00000044"
    r={2.5}
  />
  <circle
    cx={49.5}
    cy={93.1901}
    fill="#00000044"
    r={2.5}
  />
  <circle
    cx={64.5}
    cy={18.1901}
    fill="#00000044"
    r={2.5}
  />
  <circle
    cx={64.5}
    cy={48.1901}
    fill="#00000044"
    r={2.5}
  />
  <circle
    cx={64.5}
    cy={33.1901}
    fill="#00000044"
    r={2.5}
  />
  <circle
    cx={64.5}
    cy={63.1901}
    fill="#00000044"
    r={2.5}
  />
  <circle
    cx={64.5}
    cy={78.1901}
    fill="#00000044"
    r={2.5}
  />
  <circle
    cx={79.5}
    cy={63.1901}
    fill="#00000044"
    r={2.5}
  />
  <g
    style={
      Object {
        "animation": "spinners-react-romb 1.4s steps(2, end) infinite",
      }
    }
  >
    <circle
      cx={18.5}
      cy={33.1901}
      r={3.5}
    />
    <circle
      cx={18.5}
      cy={48.1901}
      r={3.5}
    />
    <circle
      cx={18.5}
      cy={63.1901}
      r={3.5}
    />
    <circle
      cx={3.5}
      cy={48.1901}
      r={3.5}
    />
    <circle
      cx={33.5}
      cy={48.1901}
      r={3.5}
    />
  </g>
</svg>
`;
